@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-06-01 13:29:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-67
+
+    Summary:
+      xml, move "XHTML.Document.to_text" to "XML.Document"
+    Revision:
+      itools--main--0.9--patch-67
+
+
+    modified files:
+     Changelog xhtml/XHTML.py xml/XML.py
+
+
 2005-05-30 18:59:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-66
 
     Summary:
